# Niro-Media-v1

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  convert_icon.py  copy_icon.cjs  index.html  package-lock.json  package.json  readme.txt
.github/workflows/: tauri-publish.yml
src/: App.css  App.tsx
src-tauri/: 2  Cargo.toml  build.rs  mpv.conf  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/libmpv2-patched/: .cargo_vcs_info.json  .gitignore  CHANGELOG.md  Cargo.toml  Cargo.toml.orig  bindings.md
src-tauri/libmpv2-patched/examples/: protocol.rs
src-tauri/libmpv2-patched/src/: mpv.rs
src-tauri/libmpv2-patched/src/mpv/: protocol.rs
src-tauri/shaders/: Anime4K_Clamp_Highlights.glsl  Anime4K_Restore_CNN_S.glsl  Anime4K_Upscale_CNN_x2_S.glsl  FSR.glsl
src-tauri/src/: downloader.rs  ffmpeg.rs  history.rs  lib.rs  player.rs  playlist.rs  plugins.rs
src/components/: ChapterMenu.tsx  ControlBar.tsx  CorruptModal.tsx  HardwareBadge.tsx  OSD.tsx  PlaylistPanel.tsx  SettingsPanel.tsx  TrackMenu.tsx  VisualizerMenu.tsx
