[package]
name = "tauri-app"
version = "2.1.0"
description = "Niro Media Desktop Player"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-fs = "2"
raw-window-handle = "0.6.2"
regex = "1.10"
tauri-plugin-global-shortcut = "2"
reqwest = { version = "0.12", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
libmpv2 = "6.0.0"

[features]

[target.'cfg(windows)'.dependencies]
winreg = "0.56.0"

[patch.crates-io]
libmpv2 = { path = "libmpv2-patched" }
